update 0.4: fix navbar issue

--- a/TNB Website/assets/css/style.css
+++ b/TNB Website/assets/css/style.css
@@ -84,4 +84,14 @@ html {
      }
   }
 
+  @media (max-width: 576px) { 
+      .mobile-hide{
+          display: none;
+      }
+   }
+    
+
+
+  
+
   
