--- a/TNB NEW/assets/css/style.css
+++ b/TNB NEW/assets/css/style.css
@@ -17,6 +17,7 @@ html {
 }
 
 
+
 /* ====================================================
 2. Bootstrap Overwrite
 =====================================================*/
@@ -136,7 +137,156 @@ color: white;
   -moz-background-size: cover; 
   -webkit-background-size: cover; 
   background-repeat: no-repeat; 
-  background-position: top center;}
+  background-position: top center;
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.4);
+}
+
+  .section1{
+    margin-top: -35px;
+  }
+
+  .cover-content{
+    color: white;
+  }
+
+  .cover-category, .cover-description {
+    position: absolute;
+    left: 10%;
+  }
+
+  .cover-category {
+    top:10px;
+    text-transform: uppercase;
+  }
+
+  .cover-description{
+    bottom: 300px;
+  }
+
+  .cover-description h1{
+    font-size: 70px;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  .section2, .section3, .section5, .section6{
+    padding: 50px 130px;
+  }
+  .description-block{
+    text-align: justify;
+  }
+
+  .description-block h2{
+    color: #005EAA;
+    padding-bottom: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  .section3, .section6{
+    background-color: rgb(235, 236, 239,0.5);
+  }
+
+  .card-display{
+    margin: 14px;
+    width: 21%;
+    background-color: #005EAA;
+    color: white;
+    height: 450px;
+    text-align: left;
+  }
+
+  .card-display .card-body img{
+    padding: 20px 0px;
+  }
+
+  .card-display .card-body .card-title{
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-bottom: 30px;
+  }
+
+  .card-display .card-body h5::after {
+    display: block;
+      content: '';
+     width: 30%;
+     height: 5px;
+     background: white;
+     position:absolute;
+     top: 155px;
+     left: 30px;
+   }
+
+   .parallax-two {
+    padding-top: 200px; 
+    padding-bottom: 200px; 
+    overflow: hidden; 
+    position: relative; 
+    width: 100%; 
+    background-image: url(../img/banner/banner-3.png); 
+    background-attachment: fixed; 
+    background-size: cover; 
+    -moz-background-size: cover; 
+    -webkit-background-size: cover; 
+    background-repeat: no-repeat; 
+    background-position: top center;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.4);
+  }
+
+  .target-content{
+    padding: 130px;
+    color: white;
+  }
+
+  .target-block h2{
+    color: white;
+    padding-bottom: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  .section5{
+    background-color: #005EAA;
+    color: white;
+    height: 485px;
+  }
+  .section5 .quote-title{
+    color: #FBDF2C;
+    text-transform: uppercase;
+    padding: 30px 0;
+  }
+
+  .section5 .quote{
+    padding: 30px 0;
+    width: 500px;
+  }
+
+  .section5 .quote-name, .quote-position{
+    line-height: -20px;
+  }
+
+  .bulletin-card{
+    margin: 10px;
+    width: 45%;
+    height: 450px;
+    text-align: left;
+  }
+
+  .bulletin-card .upper-section .bulletin-category{
+    color: red;
+    float: left;
+    width: 50%;
+  }
+
+  .bulletin-card .upper-section .bulletin-date{
+    color: red;
+  display: inline-block;
+    width: 50%;
+  }
+
+
+
+  
 
 
 /* Medium devices (tablets, 768px and up) 
