--- a/TNB NEW/assets/css/style.css
+++ b/TNB NEW/assets/css/style.css
@@ -12,9 +12,77 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  /* color: #444444;
-  background-color: #FFFFFFFF; */
 }
+
+@font-face {
+  font-family: 'DINConBol';
+  src: url('assets/fonts/DINConBol.ttf') format('ttf'),
+       url('assets/fonts/DINConBol.woff') format('woff'),
+       url('assets/fonts/DINConBol.eot') format('eot'),
+       url('assets/fonts/DINConBol.svg') format('svg');
+       font-weight:normal;
+}
+
+@font-face {
+  font-family: 'dinengschriftstd-webfont';
+  src: url('assets/fonts/dinengschriftstd-webfont.ttf') format('ttf'),
+       url('assets/fonts/dinengschriftstd-webfont.woff') format('woff'),
+       url('assets/fonts/dinengschriftstd-webfont.eot') format('eot'),
+       url('assets/fonts/dinengschriftstd-webfont.svg') format('svg');
+       font-weight:normal;
+}
+
+@font-face {
+  font-family: 'DINOT-Bold';
+  src: url('assets/fonts/DINOT-Bold.ttf') format('ttf');
+       font-weight:bold;
+}
+
+@font-face {
+  font-family: 'dinpro-black-webfont';
+  src: url('assets/fonts/dinpro-black-webfont.ttf') format('ttf'),
+       url('assets/fonts/dinpro-black-webfont.woff') format('woff'),
+       url('assets/fonts/dinpro-black-webfont.eot') format('eot'),
+       url('assets/fonts/dinpro-black-webfont.svg') format('svg');;
+       font-weight:normal;
+}
+
+@font-face {
+  font-family: 'dinpro-bold-webfont';
+  src: url('assets/fonts/dinpro-bold-webfont.ttf') format('ttf'),
+       url('assets/fonts/dinpro-bold-webfont.woff') format('woff'),
+       url('assets/fonts/dinpro-bold-webfont.eot') format('eot'),
+       url('assets/fonts/dinpro-bold-webfont.svg') format('svg');;
+       font-weight:bold;
+}
+
+@font-face {
+  font-family: 'dinpro-bold-webfont';
+  src: url('assets/fonts/dinpro-bold-webfont.ttf') format('ttf'),
+       url('assets/fonts/dinpro-bold-webfont.woff') format('woff'),
+       url('assets/fonts/dinpro-bold-webfont.eot') format('eot'),
+       url('assets/fonts/dinpro-bold-webfont.svg') format('svg');;
+       font-weight:bold;
+}
+
+@font-face {
+  font-family: 'dinpro-regular-webfont';
+  src: url('assets/fonts/dinpro-regular-webfont.ttf') format('ttf'),
+       url('assets/fonts/dinpro-regular-webfont.woff') format('woff'),
+       url('assets/fonts/dinpro-regular-webfont.eot') format('eot'),
+       url('assets/fonts/dinpro-regular-webfont.svg') format('svg');;
+       font-weight:normal;
+}
+
+@font-face {
+  font-family: 'footable';
+  src: url('assets/fonts/footable.ttf') format('ttf'),
+       url('assets/fonts/footable.woff') format('woff'),
+       url('assets/fonts/footable.eot') format('eot'),
+       url('assets/fonts/footable.svg') format('svg');;
+       font-weight:normal;
+}
+
 
 
 
@@ -26,6 +94,11 @@ html {
   color: black;
   font-weight: bold;
   font-size: 12px;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover{
+  border-bottom: 2px solid red;
+  color: red;
 }
 
 .navbar-dark .navbar-toggler-icon{
@@ -87,6 +160,10 @@ html {
 .left-notibar  ul li a, .right-notibar  ul li a{
 text-decoration: none;
 color: white;
+}
+
+.nav-link:focus, .nav-link:hover{
+  color: white;
 }
 
 .right-notibar{
@@ -152,6 +229,7 @@ color: white;
   .cover-category, .cover-description {
     position: absolute;
     left: 10%;
+    font-size: 12px;
   }
 
   .cover-category {
@@ -161,6 +239,7 @@ color: white;
 
   .cover-description{
     bottom: 300px;
+    width: 80%;
   }
 
   .cover-description h1{
@@ -173,7 +252,7 @@ color: white;
     padding: 50px 130px;
   }
   .description-block{
-    text-align: justify;
+    text-align: left;
   }
 
   .description-block h2{
@@ -351,51 +430,13 @@ color: white;
     height: 100%;
 }
 
-.container .image-post:hover .overlay .amount,
-.container .image-post:hover .overlay .h4,
-.container .image-posthover .overlay .textmuted,
-.container .image-post:hover .overlay .fa-star,
-.container .image-post:hover .overlay .fa-star-half-alt,
-.container .image-post:hover .overlay .review {
-    color: black;
-}
-
 .image-post:hover .overlay::before {
     bottom: 0px;
 }
 
-.amount {
-    font-size: 15px;
-}
-
-.textmuted {
-    color: #f8f8f8;
-    font-weight: 200;
-    font-size: 15px;
-    text-transform: capitalize;
-}
-
-.fa-star,
-.fa-star-half-alt {
-    color: white;
-    font-size: 10px;
-    margin: 0 1px;
-}
-
-.review {
-    font-size: 12px;
-    font-weight: 200;
-}
 
 
 
-
-
-  
-
-
-/* Medium devices (tablets, 768px and up) 
-The navbar toggle appears at this breakpoint */
 @media (min-width: 768px) {  
   .dropdown:hover .dropdown-menu {
       display: block;
@@ -424,6 +465,52 @@ The navbar toggle appears at this breakpoint */
 
     .desktop-hide{
       display: block;
+    }
+    #first-nav {
+      margin-top:12px;
+    }
+
+    .cover-description h1{
+      font-size: 50px;
+    }
+
+    .section2, .section3, .section5, .section6{
+      padding: 50px 70px 55px 50px;
+    }
+
+    .card-display {
+      width: 100%;
+      height: 300px;
+    }
+
+    .target-content{
+      padding: 65px;
+    }
+
+    .section5 .quote{
+      width: 300px;
+    }
+
+    .section5 {
+      height: 665px;
+    }
+
+    .section5 .right-section img {
+      width: 400px;
+      margin-left: -70px;
+    }
+
+    .section5 .quote-title {
+      padding: 0;
+    }
+
+    .bulletin-card{
+      width: 100%;
+      height: 270px;
+    }
+
+    .bulletin-card .upper-section p {
+      display: grid;
     }
  }
   
