--- a/TNB NEW/assets/css/style.css
+++ b/TNB NEW/assets/css/style.css
@@ -1,7 +1,6 @@
 html {
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
 }
 
 .body {
@@ -95,6 +94,7 @@ html {
   color: black;
   font-weight: bold;
   font-size: 12px;
+  border-bottom: 2px solid transparent;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover{
@@ -132,7 +132,7 @@ html {
 
 .nav-icon{
   width: 20px;
-  padding-right: 5px;
+  padding-right: 2px;
 }
 
 .nav-icon-followus, .nav-icon-price{
@@ -191,8 +191,8 @@ color: white;
 .search-area{
  display: flex;
  width: 14%; 
- z-index: 100;
- padding-right:30px ;
+ /* z-index: 100; */
+ /* padding-right:30px ; */
 }
 
 .desktop-hide{
@@ -437,7 +437,24 @@ color: white;
     bottom: 0px;
 }
 
+@media
+only screen and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (-o-min-device-pixel-ratio: 3/2),
+only screen and (min--moz-device-pixel-ratio: 1.5),
+only screen and (min-device-pixel-ratio: 1.5){
 
+  html,
+  body{
+    width:100%;
+    overflow-x:hidden;
+  }
+
+}
+
+@media (min-width: 769px) and (max-width: 1400px){
+ 
+  
+}
 
 
 @media (min-width: 768px) {  
@@ -516,6 +533,12 @@ color: white;
       display: grid;
     }
  }
+
+ /* * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+} */
   
 
 
