--- a/TNB NEW/assets/css/style.css
+++ b/TNB NEW/assets/css/style.css
@@ -1,19 +1,3 @@
-html {
-  height: 100%;
-  width: 100%;
-}
-
-.body {
-  font-size: 12px;
-  font-family: 'Courier New', Courier, monospace;
-  height: 100%;
-  line-height: 28px;
-  vertical-align: baseline;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-}
-
 @font-face {
   font-family: 'DINConBol';
   src: url('assets/fonts/DINConBol.ttf') format('ttf'),
@@ -66,7 +50,7 @@ html {
 }
 
 @font-face {
-  font-family: 'dinpro-regular-webfont';
+  font-family: 'dinpro-regular';
   src: url('assets/fonts/dinpro-regular-webfont.ttf') format('ttf'),
        url('assets/fonts/dinpro-regular-webfont.woff') format('woff'),
        url('assets/fonts/dinpro-regular-webfont.eot') format('eot'),
@@ -83,8 +67,22 @@ html {
        font-weight:normal;
 }
 
+html {
+  height: 100%;
+  width: 100%;
+}
 
 
+.body {
+  font-size: 12px;
+  font-family: 'dinpro-regular';
+  height: 100%;
+  line-height: 28px;
+  vertical-align: baseline;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
 
 /* ====================================================
 2. Bootstrap Overwrite
@@ -243,6 +241,7 @@ color: white;
   .cover-category {
     top:10px;
     text-transform: uppercase;
+    animation:  zoomIn 0.4s;
   }
 
   .cover-description{
@@ -254,7 +253,15 @@ color: white;
     font-size: 70px;
     text-transform: uppercase;
     font-weight: bold;
+
+    animation: zoomIn 0.5s;
   }
+
+  .cover-description p {
+    animation:  zoomIn 0.8s;
+    font-size: 15px;
+  }
+
 
   .section2, .section3, .section5, .section6{
     padding: 50px 130px;
@@ -281,6 +288,10 @@ color: white;
     color: white;
     height: 450px;
     text-align: left;
+  }
+
+  .card-display:hover{
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   }
 
   .card-display .card-body img{
@@ -357,6 +368,10 @@ color: white;
     width: 45%;
     height: 150px;
     text-align: left;
+  }
+
+  .bulletin-card:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   }
 
   .bulletin-card .upper-section span{
